--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,4 +1,4 @@
-.top {
+  .top {
     background-color: #ffffff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* Add shadow to the bottom */
     display: flex;
@@ -7,13 +7,22 @@
     justify-content: space-between;
     z-index: 999;
   }
-  
-  .topLeft img {
+
+  .topLeft {
+    width: 200px;
     height: 50px;
-    margin: 5px;
-    padding: 0px;
     cursor: pointer;
   }
+  
+  .SmallLogo {
+    display: inline-block;
+    height: auto;
+    width: auto;
+    max-width: 100%;
+    max-height: 100%;
+    position: relative;
+    overflow: visible;
+}
   
   .topRight {
     display: flex;
